--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     charset="utf-8"
   >
 </head>
-<body>
+<body class="body">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg">
     <a 
       class="header__link" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -25,50 +25,50 @@
   </div>
   <div class="app">
     <p id="add-section">
-      <label for="new-task">Add Item</label>
+      <label class="app__add-label" for="new-task">Add Item</label>
       <div class="app__input-container">
         <input 
           id="new-task"
-          class="app__input" 
+          class="input app__input app__add-input" 
           type="text"
         >
-        <button>Add</button>
+        <button class="app__btn">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="app__list-title">Todo</h3>
     <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
+      <li class="app__item">
+        <input type="checkbox" class="input app__check-input">
         <label class="app__task-label">Pay Bills</label>
-        <input type="text" class="app__input">
-        <button class="app__edit-btn">Edit</button>
-        <button class="app__delete-btn">
-          <img src="./remove.svg">
+        <input type="text" class="input app__input app__edit-input">
+        <button class="app__btn app__edit-btn">Edit</button>
+        <button class="app__btn app__delete-btn">
+          <img src="./remove.svg" class="app__delete-img">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
+      <li class="app__item edit-mode">
+        <input type="checkbox" class="input app__check-input">
         <label class="app__task-label">Go Shopping</label>
         <input 
           type="text" 
           value="Go Shopping" 
-          class="app__input"
+          class="input app__input app__edit-input"
         >
-        <button class="app__edit-btn">Save</button>
-        <button class="app__delete-btn">
-          <img src="./remove.svg">
+        <button class="app__btn app__edit-btn">Save</button>
+        <button class="app__btn app__delete-btn">
+          <img src="./remove.svg" class="app__delete-img">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="app__list-title">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
+      <li class="app__item">
+        <input type="checkbox" class="input app__check-input" checked>
         <label class="app__task-label">See the Doctor</label>
-        <input type="text" class="app__input">
-        <button class="app__edit-btn">Edit</button>
-        <button class="app__delete-btn">
-          <img src="./remove.svg">
+        <input type="text" class="input app__input app__edit-input">
+        <button class="app__btn app__edit-btn">Edit</button>
+        <button class="app__btn app__delete-btn">
+          <img src="./remove.svg" class="app__delete-img">
         </button>
       </li>
     </ul>
