--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="body">
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="matrix">
     <a 
       class="header__link" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -44,7 +44,7 @@
           <input type="text" class="input app__input app__edit-input">
           <button class="app__btn app__edit-btn">Edit</button>
           <button class="app__btn app__delete-btn">
-            <img src="./remove.svg" class="app__delete-img">
+            <img src="./remove.svg" class="app__delete-img" alt="delete">
           </button>
         </li>
         <li class="app__item edit-mode">
@@ -57,7 +57,7 @@
           >
           <button class="app__btn app__edit-btn">Save</button>
           <button class="app__btn app__delete-btn">
-            <img src="./remove.svg" class="app__delete-img">
+            <img src="./remove.svg" class="app__delete-img" alt="delete">
           </button>
         </li>
       </ul>
@@ -71,7 +71,7 @@
           <input type="text" class="input app__input app__edit-input">
           <button class="app__btn app__edit-btn">Edit</button>
           <button class="app__btn app__delete-btn">
-            <img src="./remove.svg" class="app__delete-img">
+            <img src="./remove.svg" class="app__delete-img" alt="delete">
           </button>
         </li>
       </ul>
